- fix, dark mode

--- a/BE/assets/scss/components/_card.scss
+++ b/BE/assets/scss/components/_card.scss
@@ -5,6 +5,7 @@
     flex-col
     w-auto
     border-gray-200
+    dark:border-gray-700
     border-b-2
     border-l-2
     bg-componentBackground-light
